# RabbitRemoteControl

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Authors.md  Authors_zh_CN.md  CMakeLists.txt  CMakePresets.json  ChangeLog.md  ChangeLog_zh_CN.md  Dockerfile  Doxyfile  Doxyfile.in  README.md  README_zh_CN.md  RabbitRemoteControl.pro  RabbitRemoteControl.rb  appveyor.yml  appveyor.yml.bak  build_android.sh  build_appimage.sh  build_debpackage.sh  deploy.sh  rabbitremotecontrol-build-deps_0.0.32_amd64.buildinfo  rabbitremotecontrol-build-deps_0.0.32_amd64.changes  release.sh  tag.sh  vcpkg.json  vcpkg.json.bak
App/: App.pro  CMakeLists.txt  FrmFullScreenToolBar.cpp  FrmFullScreenToolBar.h  FrmViewScroll.cpp  FrmViewScroll.h  View.cpp  View.h  ViewTable.cpp  ViewTable.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
App/Client/: CMakeLists.txt  FavoriteMimeData.cpp  FavoriteView.cpp  FavoriteView.h  FrmActive.cpp  FrmActive.h  FrmConnecters.cpp  FrmConnecters.h  FrmFullScreenToolBar.cpp  FrmFullScreenToolBar.h  FrmFullScreenToolBar.ui  FrmListConnects.cpp  FrmListConnects.h  FrmListRecent.cpp  FrmListRecent.h  FrmListRecentConnects.cpp  FrmListRecentConnects.h  FrmOpenConnect.cpp  FrmOpenConnect.h  FrmOpenConnect.ui  ParameterApp.cpp  ParameterApp.h  ParameterDlgSettings.cpp  ParameterDlgSettings.h  ParameterDlgSettings.ui  View.cpp  View.h  ViewFrmScroll.cpp  ViewFrmScroll.h  ViewSplitter.cpp  ViewSplitter.h  ViewSplitterContainer.cpp  ViewSplitterContainer.h  ViewTable.cpp  ViewTable.h  VirtualKeyboardSettingsDialog.cpp  VirtualKeyboardSettingsDialog.h  main.cpp  mainwindow.cpp  mainwindow.h  (+1 more)
App/Resource/: Resource.qrc
App/Service/: CMakeLists.txt  MainConfigure.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
App/ServiceConfigure/: CMakeLists.txt  MainConfigure.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
App/Viewer/: CMakeLists.txt  DlgSettings.cpp  DlgSettings.h  DlgSettings.ui  DockWdgFavorite.cpp  DockWdgFavorite.h  DockWdgFavorite.ui  FavoriteMimeData.h  FavoriteView.cpp  FavoriteView.h  FrmFullScreenToolBar.cpp  FrmFullScreenToolBar.h  FrmViewScroll.cpp  FrmViewScroll.h  ParameterApp.cpp  ParameterApp.h  ParameterDlgSettings.cpp  ParameterDlgSettings.h  ParameterDlgSettings.ui  View.h  ViewFrmScroll.h  ViewTable.cpp  ViewTable.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Channel/: CMakeLists.txt  Channel.cpp  Channel.h  Event.cpp  Event.h
Channel/ICE/: ChannelIce.cpp  ChannelIce.h  DataChannelIce.cpp  DataChannelIceChannel.cpp  DataChannelIceChannel.h  FrmParameterICE.cpp  FrmParameterICE.h  FrmParameterICE.ui  Ice.cpp  Ice.h  IceSignal.cpp  IceSignal.h  IceSignalQXmppIq.cpp  IceSignalQXmppIq.h  IceSignalQxmpp.cpp  IceSignalQxmpp.h  IceSignalWebSocket.cpp  ParameterICE.cpp  ParameterICE.h  ParameterSignal.cpp  ParameterSignal.h
Channel/SSH/: ChannelSSHTunnel.cpp  ChannelSSHTunnel.h  ChannelSSHTunnelForward.cpp  ChannelSSHTunnelForward.h  DlgUserPassword.cpp  ParameterChannelSSH.cpp  ParameterChannelSSH.h  ParameterSSH.cpp  ParameterSSH.h  (+2 more)
Client/: Backend.cpp  Backend.h  BackendDesktop.cpp  BackendDesktop.h  BackendThread.cpp  BackendThread.h  CMakeLists.txt  Client.cpp  Client.h  Connect.cpp  Connect.h  ConnectDesktop.cpp  ConnectDesktop.h  ConnectMulti.cpp  ConnectMulti.h  ConnectThread.cpp  ConnectThread.h  Connecter.cpp  Connecter.h  ConnecterConnect.cpp  ConnecterConnect.h  ConnecterDesktop.cpp  ConnecterDesktop.h  ConnecterDesktopThread.cpp  ConnecterDesktopThread.h  ConnecterThread.cpp  ConnecterThread.h  DlgInputPassword.cpp  DlgInputPassword.ui  DlgUserPassword.cpp  DlgUserPassword.h  FrmParameterClient.cpp  FrmParameterClient.h  FrmParameterClient.ui  FrmParameterViewer.cpp  FrmParameterViewer.h  FrmParameterViewer.ui  FrmScroll.cpp  FrmScroll.h  FrmViewer.cpp  (+44 more)
Plugins/: CMakeLists.txt  ConnecterPluginsTerminal.h  FrmParameterTerminalAppearanceSettings.ui
Service/: CMakeLists.txt  Desktop.cpp  Desktop.h  DesktopWindows.cpp  DesktopWindows.h  DesktopXLib.cpp  DesktopXLib.h  Display.h  DisplayWindows.cpp  DisplayWindows.h  DisplayXLib.cpp  DisplayXLib.h  Disply.cpp  Disply.h  InputDevice.cpp  InputDevice.h  InputDeviceWindows.cpp  InputDeviceWindows.h  InputDeviceX11.cpp  InputDeviceX11.h  InputDeviceXLib.cpp  InputDeviceXLib.h  ManagerPlugins.cpp  ManagerPlugins.h  ParameterService.cpp  ParameterService.h  PluginServicThread.cpp  PluginServicThread.h  PluginService.cpp  PluginService.h  PluginServiceThread.cpp  PluginServiceThread.h  Screen.h  ScreenWindows.cpp  ScreenWindows.h  ScreenXLib.cpp  ScreenXLib.h  Service.cpp  Service.h  ServiceManager.cpp  (+3 more)
Src/: Backend.cpp  Backend.h  BackendDesktop.cpp  BackendDesktop.h  BackendServer.cpp  BackendServer.h  BackendThread.cpp  BackendThread.h  CMakeLists.txt  CheckBoxHeader.cpp  CheckBoxHeader.h  Connect.cpp  Connect.h  ConnectThread.cpp  ConnectThread.h  ConnectVnc.cpp  ConnectVnc.h  ConnecterConnect.h  Database.cpp  Database.h  DatabaseTree.cpp  DatabaseTree.h  DlgInputPassword.cpp  DlgInputPassword.h  DlgInputPassword.ui  DlgUserPassword.cpp  DlgUserPassword.h  DlgUserPassword.ui  FrmManagePlugins.cpp  FrmManagePlugins.h  FrmManagePlugins.ui  FrmParameterClient.cpp  FrmParameterClient.h  FrmScroll.cpp  FrmScroll.h  FrmViewServer.cpp  FrmViewServer.h  FrmViewer.cpp  FrmViewer.h  FrmViewer.ui  (+41 more)
Viewer/: CMakeLists.txt  Connect.cpp  Connect.h  ConnectThread.cpp  ConnectThread.h  ConnectTigerVnc.cpp  ConnectTigerVnc.h  ConnectVnc.h  Connecter.cpp  Connecter.h  ConnecterBackThread.cpp  ConnecterBackThread.h  ConnecterDesktop.cpp  ConnecterDesktop.h  ConnecterDesktopThread.cpp  ConnecterDesktopThread.h  ConnecterPlugins.cpp  ConnecterPlugins.h  DlgInputPassword.cpp  DlgInputPassword.h  DlgInputPassword.ui  FramePixelBuffer.cpp  FramePixelBuffer.h  FrmParameterViewer.cpp  FrmParameterViewer.h  FrmParameterViewer.ui  FrmViewScroll.cpp  FrmViewScroll.h  FrmViewer.cpp  FrmViewer.h  FrmViewer.ui  FrmViewerOpenGL.cpp  FrmViewerOpenGL.h  Hook.cpp  Hook.h  ManageConnect.cpp  ManageConnect.h  ManageConnecter.cpp  ManageConnecter.h  ManagePassword.cpp  (+22 more)
(+7738 files in other folders)
